test/fails/bad_tags/assign4.lgl
void main() {

    tag a is vec2;
    tag b is vec3;

    a->b x = [[1., 1., 1.], [1., 1., 1]]; // Reversed order
}